--- a/accueil.css
+++ b/accueil.css
@@ -1,85 +1,64 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    font-family: Avenir, sans-serif;
+    box-sizing: border-box;
 }
 
-nav {
-    width: 100%;
+body {
+    color: #333;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 22px;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+.nav {
     margin: 0 auto;
-    background-color: blue;
-    position: sticky;
-    top: 0px;
+    width: 1000px;
 }
 
-nav ul {
-    list-style-type: none;
+header {
+    border-bottom: 1px solid #eee;
 }
 
-nav ul li {
-    float: left;
-    width: 25%;
-    text-align: center;
+header li {
+    display: inline-block;
+    vertical-align: top;
     position: relative;
 }
 
-nav ul::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-nav a {
+header li a {
     display: block;
-    text-decoration: none;
-    color: black;
-    border-bottom: 2px solid transparent;
-    padding: 10px 0px;
+    padding: 20px;
 }
 
-nav a:hover {
-    color: blue;
-    border-bottom: 2px solid blue;
+header li a:hover {
+    background-color: #1abc9c;
+    color: #fff;
+}
+
+header li:hover .sous {
+    display: block;
 }
 
 .sous {
     display: none;
-    box-shadow: 0px 1px 2px gray;
-    background-color: white;
     position: absolute;
-    width: 100%;
-    z-index: 1000;
-}
-
-nav>ul li:hover .sous {
-    display: block;
+    background-color: #1abc9c;
+    width: 200px;
 }
 
 .sous li {
-    float: none;
-    width: 100%;
-    text-align: left;
+    display: block;
 }
 
-.sous a {
-    padding: 10px;
-    border-bottom: none;
+.sous li a {
+    color: #fff;
 }
 
-.sous a:hover {
-    border-bottom: none;
-    background-color: RGBa(200, 200, 200, 0.1);
-}
-
-.conteneur {
-    margin: 50px 20px;
-    height: 1500px;
-}
-
-footer {
-    background-color: red;
-}
-
-section {
-    background-color: white;
+.sous li:hover a {
+    background-color: #fff;
+    color: #1abc9c;
 }
