--- a/accueil.css
+++ b/accueil.css
@@ -1,64 +1,93 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
-    color: #333;
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    margin-top: -16px;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: black;
+    position: fixed;
+    top: O;
+    padding: 0px;
+    width: 100%;
+}
+
+.navbar a {
+    float: left;
     font-size: 16px;
-    line-height: 22px;
-}
-
-a {
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    color: #333;
 }
 
-.nav {
-    margin: 0 auto;
-    width: 1000px;
+.dropdown {
+    float: right;
+    overflow: hidden;
 }
 
-header {
-    border-bottom: 1px solid #eee;
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
 }
 
-header li {
-    display: inline-block;
-    vertical-align: top;
-    position: relative;
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+    background-color: rgb(90, 159, 248);
 }
 
-header li a {
-    display: block;
-    padding: 20px;
-}
-
-header li a:hover {
-    background-color: #1abc9c;
-    color: #fff;
-}
-
-header li:hover .sous {
-    display: block;
-}
-
-.sous {
+.dropdown-content {
     display: none;
     position: absolute;
-    background-color: #1abc9c;
-    width: 200px;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
-.sous li {
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
     display: block;
 }
 
-.sous li a {
-    color: #fff;
+.logo {
+    width: 5%;
+    padding-top: 3px;
+    padding-left: 3px;
 }
 
-.sous li:hover a {
-    background-color: #fff;
-    color: #1abc9c;
+.p {
+    padding-top: 48px;
+}
+
+.bandeauTop {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(90, 159, 248);
+    width: 100%;
+}
+
+.bandeauTop a {
+    color: black;
+    text-decoration: none;
 }
