--- a/CSS/test.css
+++ b/CSS/test.css
@@ -1,24 +1,24 @@
 @keyframes entree {
     from {opacity:0;
-    left:0px}
+    left:10px}
     to {opacity:1;
-    left:128px}
+    left:138px}
 }
 @keyframes sortie {
     from {opacity:1;
-    left:128px}
+    left:138px}
     to {opacity:0;
-    left:0px}
+    left:10px}
 }
 @keyframes entree2 {
     from {opacity:0;
-    left:0px}
+    left:10px}
     to {opacity:1;
-    left:-128px}
+    left:-118px}
 }
 @keyframes sortie2 {
     from {opacity:1;
-    left:-128px}
+    left:-118px}
     to {opacity:0;
     left:0px}
 }
@@ -28,15 +28,15 @@
     position:absolute;
     opacity: 0;
     height: 256px;
-    left:0px;
-    top:0px;
     z-index: -2;
+    top:10px;
+    left:10px;
 }
-.test:hover .main{
+.flex:hover .main{
     animation-name: entree;
     animation-duration: 0.5s;
     opacity: 1;
-    left:128px
+    left:138px
 }
 .main2{
     animation-name: sortie2;
@@ -44,30 +44,22 @@
     position:absolute;
     opacity: 0;
     height: 256px;
-    left:0px;
-    top:0px;
     z-index: -2;
+    top:10px;
+    left:10px;
 }
-.test:hover .main2{
+.flex:hover .main2{
     animation-name: entree2;
     animation-duration: 0.5s;
     opacity: 1;
-    left:-128px
+    left:-118px
 }
 .main3{
     position:absolute;
     height:256px;
-    left:0px;
-    top:0px;
     z-index: -1;
-}
-.test{
-    position:relative;
-    color: #ff3320;
+    top:10px;
     left:10px;
-    top: 10px;
-    font-weight: bold;
-    text-shadow:1px 1px black;
 }
 .card{
     border-radius: 10px;
@@ -75,7 +67,5 @@
     width: 208px;
     height: 278px;
     position:relative;
-    left:256px;
-    top:256px;
     z-index: -3;
 }
