--- a/accueil.css
+++ b/accueil.css
@@ -5,12 +5,13 @@ body {
 }
 
 .navbar {
-    overflow: hidden;
-    background-color: black;
     position: fixed;
-    top: O;
-    padding: 0px;
+    top: 0;
+    z-index: 210;
+    max-width: 100%;
     width: 100%;
+    border-bottom: 0;
+    background-color: black;
 }
 
 .navbar a {
@@ -32,7 +33,7 @@ body {
     border: none;
     outline: none;
     color: white;
-    padding: 14px 16px;
+    padding: 37px 20px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
@@ -43,16 +44,16 @@ body {
     background-color: rgb(90, 159, 248);
 }
 
-.dropdown-content {
+.dropdown-content1 {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 115px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content1 a {
     float: none;
     color: black;
     padding: 12px 16px;
@@ -61,18 +62,69 @@ body {
     text-align: left;
 }
 
-.dropdown-content a:hover {
+.dropdown-content1 a:hover {
     background-color: #ddd;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content1 {
+    display: block;
+}
+
+.dropdown-content2 {
+    display: none;
+    position: fixed;
+    background-color: #f9f9f9;
+    min-width: 113px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content2 a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content2 a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content2 {
+    display: block;
+}
+
+.dropdown-content3 {
+    display: none;
+    position: fixed;
+    background-color: #f9f9f9;
+    min-width: 92px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content3 a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content3 a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content3 {
     display: block;
 }
 
 .logo {
-    width: 5%;
-    padding-top: 3px;
-    padding-left: 3px;
+    width: 60px;
+    height: 60px;
 }
 
 .p {
@@ -92,30 +144,25 @@ body {
     text-decoration: none;
 }
 
-
-#infoAccueil{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/fondaccueil.jpg) ;
+#infoAccueil {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/fondaccueil.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-   
 }
 
-#txtAccueil{
+#txtAccueil {
     text-align: center;
     color: white;
     padding-top: 10%;
     padding-left: 10%;
-    font-size:300%
-
+    font-size: 300%
 }
 
-
-#soustxtAccueil{
+#soustxtAccueil {
     text-align: center;
     color: #04A0E9;
     padding-bottom: 10%;
     padding-left: 10%;
-    font-size:150%
-
-    }
+    font-size: 150%
+}
