--- a/accueil.css
+++ b/accueil.css
@@ -6,9 +6,9 @@ body {
 
 .navbar {
     position: fixed;
-    top: 0;
     z-index: 210;
     max-width: 100%;
+    top: 1px;
     width: 100%;
     border-bottom: 0;
     background-color: black;
@@ -193,9 +193,11 @@ body {
     }
     .flex{
         display: flex;
-        justify-content: center;
+        flex-direction:row;
+        justify-content: space-evenly;
+        padding-bottom: 10px;
     }
-    .main{
+    .left{
         animation-name: sortie;
         animation-duration: 0.5s;
         position:absolute;
@@ -205,13 +207,13 @@ body {
         top:10px;
         left:10px;
     }
-    .flex:hover .main{
+    .hover:hover .left{
         animation-name: entree;
         animation-duration: 0.5s;
         opacity: 1;
         left:138px
     }
-    .main2{
+    .right{
         animation-name: sortie2;
         animation-duration: 0.5s;
         position:absolute;
@@ -221,24 +223,95 @@ body {
         top:10px;
         left:10px;
     }
-    .flex:hover .main2{
+    .hover:hover .right{
         animation-name: entree2;
         animation-duration: 0.5s;
         opacity: 1;
         left:-118px
     }
-    .main3{
+    .middle{
         position:absolute;
         height:256px;
         z-index: -1;
         top:10px;
-        left:10px;
+        transform:scale(100%);
+        transition: transform 1s;
     }
-    .card{
+    .hover:hover .middle{
+        transform:scale(105%);
+        transition: transform 1s;
+    }
+    .card2{
         border-radius: 10px;
-        background-color: #00a1fc;
-        width: 208px;
+        width: 250px;
+        display: flex;
+        justify-content: center;
         height: 278px;
         position:relative;
         z-index: -3;
+        box-shadow: 2px 5px 10px black;
+        background-image: url("./img/Motif.png");
+        background-repeat: no-repeat;
+        background-size:cover;
+    }
+    p{
+        text-align: center;
+    }
+    h3{
+        text-align: center;
+        font-size: 64px;
+        margin-bottom: 16px;
+    }
+    .description{
+        text-shadow: 0px 0px 5px white;
+        color: black;
+    }
+    footer{
+        background-color: black;
+        color: white;
+        padding-bottom: 10px;
+        display: flex;
+    }
+    .transition{
+        position: absolute;
+        top: 480px;
+        width: 1440px;
+        height: 50px;
+    }
+    .page{
+        background-color: #0398f1;
+        width: 1440px;
+        height: 10px;
+    }
+    .sphère{
+        border-radius: 128px;
+        background-color: #0398f1;
+        width: 12px;
+        height: 12px;
+    }
+    .barre{
+        background-color: #0398f1;
+        width: 256px;
+        height: 8px;
+    }
+    .déco{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 64px;
+    }
+    @keyframes pompe{
+        from{left:582px;}
+        to{left:850px;}
+    }
+    .transmission{
+        position: absolute;
+        background-color: #0398f1;
+        border-radius: 128px;
+        width: 10px;
+        height: 10px;
+        left:582px;
+        animation-name: pompe;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
     }
