--- a/accueil.css
+++ b/accueil.css
@@ -39,9 +39,8 @@ body {
     margin: 0;
 }
 
-.navbar a:hover,
 .dropdown:hover .dropbtn {
-    background-color: rgb(90, 159, 248);
+    background-color: black;
 }
 
 .dropdown-content1 {
@@ -165,4 +164,75 @@ body {
     padding-bottom: 10%;
     padding-left: 10%;
     font-size: 150%
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+.container {
+    padding-top: 10px;
+}
+
+h2 {
+    text-align: center;
+    padding: 20px;
+}
+
+h3 {
+    text-align: center;
+    padding: 20px;
+}
+
+.slick-slide {
+    margin: 20px;
+}
+
+.slick-slide img {
+    padding-top: 16px;
+    align-items: center;
+    min-width: 40px;
+    width: 100%;
+    height: 100%;
+}
+
+.TailleImg {
+    width: 50px;
+}
+
+.slick-slider {
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+}
+
+.slick-list {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+.slick-track {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block
+}
+
+.slick-slide {
+    display: none;
+    float: left;
+    height: 100%;
+    min-height: 1px;
+}
+
+.slick-slide img {
+    display: block;
+}
+
+.slick-initialized .slick-slide {
+    display: block;
+}
+
+.copy {
+    padding-top: 250px;
 }
