--- a/accueil.css
+++ b/accueil.css
@@ -11,7 +11,7 @@ body {
     max-width: 100%;
     width: 100%;
     border-bottom: 0;
-    background-color: black;
+    background-color: rgb(90, 159, 248);
 }
 
 .navbar a {
