ajout page mypartner

--- a/accueil.css
+++ b/accueil.css
@@ -170,6 +170,13 @@ body {
     font-size: 150%;
 }
 
+#nomAppli{
+    text-align: center;
+    color: white;
+    padding-bottom: 10%;
+    font-size: 300%;
+}
+
 .pTitre{
     margin:0;
 }
