--- a/servithenEN/cssEN/accueilEN.css
+++ b/servithenEN/cssEN/accueilEN.css
@@ -165,7 +165,7 @@ body {
 
 #soustxtAccueil {
     text-align: center;
-    color: white;
+    color: rgb(159, 198, 40);
     padding-bottom: 10%;
     font-size: 150%
 }
@@ -377,6 +377,13 @@ footer {
     display: flex;
 }
 
+.transition {
+    position: absolute;
+    top: 480px;
+    width: 1440px;
+    height: 50px;
+}
+
 .page {
     background-color: rgb(159, 198, 40);
     width: 1440px;
@@ -430,6 +437,8 @@ a {
     text-decoration: none;
     text-align: start;
 }
+
+.footers {}
 
 .footers1 {
     margin-top: 16px;
