--- a/servithenEN/cssEN/accueilEN.css
+++ b/servithenEN/cssEN/accueilEN.css
@@ -4,6 +4,11 @@ body {
     margin-top: -16px;
 }
 
+.navbarcontent {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .navbar {
     position: fixed;
     z-index: 210;
@@ -15,7 +20,8 @@ body {
 }
 
 .langage {
-    margin-top: 17px;
+    float: right;
+    padding: 31px 16px;
     width: 30px;
     height: 30px;
 }
@@ -24,21 +30,13 @@ body {
     background-color: whitesmoke;
 }
 
-.navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
 .dropdown {
     float: right;
     overflow: hidden;
 }
 
 .dropdown .dropbtn {
+    display: flex;
     font-size: 16px;
     border: none;
     outline: none;
@@ -132,6 +130,8 @@ body {
 }
 
 .logo {
+    padding: 14px 16px;
+    float: left;
     width: 60px;
     height: 60px;
 }
@@ -476,8 +476,6 @@ a {
     text-decoration: none;
     text-align: start;
 }
-
-.footers {}
 
 .footers1 {
     margin-top: 16px;
