--- a/servithenFR/cssFR/accueilFR.css
+++ b/servithenFR/cssFR/accueilFR.css
@@ -20,22 +20,14 @@ body {
 }
 
 .langage {
-    margin-top: 17px;
+    float: right;
+    padding: 31px 16px;
     width: 30px;
     height: 30px;
 }
 
 #caroussel {
     background-color: whitesmoke;
-}
-
-.navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
 }
 
 .dropdown {
@@ -138,6 +130,8 @@ body {
 }
 
 .logo {
+    padding: 14px 16px;
+    float: left;
     width: 60px;
     height: 60px;
 }
@@ -482,8 +476,6 @@ a {
     text-decoration: none;
     text-align: start;
 }
-
-.footers {}
 
 .footers1 {
     margin-top: 16px;
