--- a/servithenEN/cssEN/accueilEN.css
+++ b/servithenEN/cssEN/accueilEN.css
@@ -480,3 +480,28 @@ a {
 .footers1 {
     margin-top: 16px;
 }
+
+.logoinfo {
+    margin-right: 4%;
+    width: 10%;
+    max-height: 45px;
+    min-width: 30px;
+}
+
+.foter {
+    width: 20%;
+    display: flex;
+    justify-content: center;
+}
+
+.foters {
+    width: 20%;
+    text-align: center;
+}
+
+.coordonne {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
