--- a/servithenFR/cssFR/formFR.css
+++ b/servithenFR/cssFR/formFR.css
@@ -54,6 +54,7 @@ h2 {
     padding: 10px;
     border: 2px solid black;
     box-shadow: 6px 3px 3px gray;
+    background-color: rgba(160, 157, 157, 0.884);
 }
 
 .logoInfo {
