--- a/servithenEN/cssEN/accueilEN.css
+++ b/servithenEN/cssEN/accueilEN.css
@@ -7,6 +7,7 @@ body {
 .navbarcontent {
     display: flex;
     flex-wrap: wrap;
+
 }
 
 .navbar {
@@ -21,9 +22,9 @@ body {
 
 .langage {
     float: right;
-    padding: 31px 16px;
-    width: 30px;
-    height: 30px;
+    padding: 38px 16px;
+    width: 20px;
+    height: 15px;
 }
 
 #caroussel {
@@ -130,10 +131,9 @@ body {
 }
 
 .logo {
-    padding: 14px 16px;
     float: left;
-    width: 60px;
-    height: 60px;
+    width: 91px;
+    height: 91px;
 }
 
 .presentation {
@@ -410,7 +410,7 @@ h3 {
 }
 
 footer {
-    background-color: black;
+    background-color: rgb(47, 53, 83);
     color: white;
     padding-bottom: 10px;
     display: flex;
