--- a/servithenFR/cssFR/appli.css
+++ b/servithenFR/cssFR/appli.css
@@ -40,3 +40,34 @@ text-align: center ;
 }
 
 
+.logoinfo {
+    margin-right: 4%;
+    width: 10%;
+    max-height: 45px;
+    min-width: 30px;
+}
+
+.foter {
+    width: 20%;
+    display: flex;
+    justify-content: center;
+}
+
+.foters {
+    width: 20%;
+    text-align: center;
+}
+
+.coordonne {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+footer {
+    background-color: rgb(47, 53, 83);
+    color: white;
+    padding-bottom: 10px;
+    display: flex;
+}
