--- a/servithenFR/cssFR/accueilFR.css
+++ b/servithenFR/cssFR/accueilFR.css
@@ -37,11 +37,10 @@ body {
 
 .dropdown .dropbtn {
     display: flex;
-    font-size: 16px;
     border: none;
     outline: none;
     color: white;
-    padding: 37px 20px;
+    padding: 37px 10px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
@@ -53,7 +52,7 @@ body {
 
 .dropdown-content1 {
     display: none;
-    position: fixed;
+    position: absolute;
     background-color: #f9f9f9;
     min-width: 115px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -209,17 +208,17 @@ body {
     font-size: 150%
 }
 
-
-#nomAppli{
+#nomAppli {
     text-align: center;
     color: white;
     padding-bottom: 10%;
     font-size: 300%;
 }
 
-.pTitre{
-    margin:0;
+.pTitre {
+    margin: 0;
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .container {
     padding-top: 10px;
@@ -487,10 +486,6 @@ a {
     text-decoration: none;
     text-align: start;
 }
-
-
-
-
 
 .footers1 {
     margin-top: 16px;
