--- a/servithenFR/cssFR/accueilFR.css
+++ b/servithenFR/cssFR/accueilFR.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     margin-top: -16px;
+    background-color: #F9F9F9;
 }
 
 .navbarcontent {
@@ -189,7 +190,7 @@ body {
 }
 
 #infoAccueil {
-    background-image: linear-gradient( rgb(47, 53, 83), transparent), url(/img/fondaccueil.jpg);
+    background-image: linear-gradient( rgb(47, 53, 83), transparent);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -348,7 +349,7 @@ h3 {
     position: absolute;
     opacity: 0;
     height: 256px;
-    z-index: -2;
+    z-index: 1;
     top: 10px;
     left: 10px;
 }
@@ -366,7 +367,7 @@ h3 {
     position: absolute;
     opacity: 0;
     height: 256px;
-    z-index: -2;
+    z-index: 1;
     top: 10px;
     left: 10px;
 }
@@ -381,7 +382,7 @@ h3 {
 .middle {
     position: absolute;
     height: 256px;
-    z-index: -1;
+    z-index: 2;
     top: 10px;
     transform: scale(100%);
     transition: transform 1s;
@@ -399,7 +400,7 @@ h3 {
     justify-content: center;
     height: 278px;
     position: relative;
-    z-index: -3;
+    z-index: 0;
     box-shadow: 2px 5px 10px black;
     background-repeat: no-repeat;
     background-size: cover;
@@ -418,6 +419,7 @@ h3 {
 .description {
     text-shadow: 0px 0px 5px white;
     color: black;
+    z-index: 4;
 }
 
 footer {
@@ -519,4 +521,38 @@ a {
     flex-direction: column;
     align-items: center;
     width: 100%;
+}
+.modifright{
+    position: absolute;
+    left: 188px
+}
+.modifleft{
+    position: absolute;
+    left: -188px
+}
+.descriptionmodif{
+    position: absolute;
+}
+.modifmiddle{
+    position: absolute;
+    top: 64px;
+}
+.button{
+    position: relative;
+    border-radius: 4px;
+    background-color: grey;
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    left: 50vw;
+    text-align: center;
+}
+.fondaccueil {
+    z-index: -1;
+    position: absolute;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+    width: 100vw;
+}
+section{
+    background-color: #F9F9F9;
 }
