--- a/servithenFR/cssFR/accueilFR.css
+++ b/servithenFR/cssFR/accueilFR.css
@@ -17,6 +17,7 @@ body {
     width: 100%;
     border-bottom: 0;
     background-color: rgb(47, 53, 83);
+    box-shadow: rgb(0 0 0 / 12%) 0 1px 3px;
 }
 
 .langage {
@@ -27,7 +28,7 @@ body {
 }
 
 #caroussel {
-    background-color: whitesmoke;
+    background-color: rgb(214, 213, 213);
 }
 
 .dropdown {
@@ -510,4 +511,59 @@ a {
     flex-direction: column;
     align-items: center;
     width: 100%;
+}
+
+.DL {
+    color: black;
+}
+
+.imgBrochur {
+    width: 30%;
+    margin: 3%;
+    float: left;
+}
+
+.fondBroch {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.carrerimg {
+    background-color: rgb(47, 53, 83);
+}
+
+.texteBroch {
+    color: white;
+    margin: 3%;
+}
+
+.btnPDF {
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    font: 14px/100% Arial, Helvetica, sans-serif;
+    padding: .5em 2em .55em;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+    -webkit-border-radius: .5em;
+    -moz-border-radius: .5em;
+    border-radius: .5em;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+}
+
+.btnPDF:hover {
+    text-decoration: none;
+}
+
+.btnPDF:active {
+    position: relative;
+    top: 1px;
+}
+
+.btnPDF {
+    background-color: white;
 }
