--- a/servithenFR/cssFR/accueilFR.css
+++ b/servithenFR/cssFR/accueilFR.css
@@ -220,6 +220,7 @@ body {
 
 .pTitre{
     margin:0;
+    margin-top: 32px;
 }
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .container {
@@ -438,7 +439,6 @@ footer {
 
 .page {
     background-color: rgb(47, 53, 83);
-    width: 100%;
     height: 4px;
 }
 
@@ -555,4 +555,7 @@ a {
 }
 section{
     background-color: #F9F9F9;
+}
+.fond{
+    padding-top: 64px;
 }
