--- a/servithenEN/cssEN/accueilEN.css
+++ b/servithenEN/cssEN/accueilEN.css
@@ -523,10 +523,6 @@ footer {
     width: 100%;
 }
 
-.DL {
-    color: black;
-}
-
 .imgBrochur {
     width: 30%;
     margin: 3%;
@@ -548,32 +544,28 @@ footer {
     margin: 3%;
 }
 
+.DL {
+    color: black;
+    text-decoration: none;
+}
+
 .btnPDF {
     display: inline-block;
     outline: none;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
-    font: 14px/100% Arial, Helvetica, sans-serif;
-    padding: .5em 2em .55em;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
-    -webkit-border-radius: .5em;
-    -moz-border-radius: .5em;
-    border-radius: .5em;
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+    padding: 1% 1% 1%;
+    border-radius: 30px;
+    background-color: rgb(214, 213, 213);
 }
 
 .btnPDF:hover {
     text-decoration: none;
+    background-color: rgb(233, 232, 232);
 }
 
 .btnPDF:active {
     position: relative;
     top: 1px;
-}
-
-.btnPDF {
-    background-color: white;
 }
