--- a/servithenEN/cssEN/accueilEN.css
+++ b/servithenEN/cssEN/accueilEN.css
@@ -569,3 +569,11 @@ footer {
     position: relative;
     top: 1px;
 }
+
+.Copyright {
+    text-align: start;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+}
