--- a/servithenFR/cssFR/accueilFR.css
+++ b/servithenFR/cssFR/accueilFR.css
@@ -17,7 +17,7 @@ body {
     width: 100%;
     border-bottom: 0;
     background-color: rgb(47, 53, 83);
-    box-shadow: rgb(0 0 0 / 12%) 0 1px 3px;
+    box-shadow: rgb(0 0 0 / 62%) 0 5px 20px;
 }
 
 .langage {
@@ -568,4 +568,22 @@ footer {
 .btnPDF:active {
     position: relative;
     top: 1px;
+}
+
+.Copyright {
+    text-align: start;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+}
+
+P.mention {
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+
+h3 {
+    font-size: 180%;
 }
