--- a/servithenEN/cssEN/accueilEN.css
+++ b/servithenEN/cssEN/accueilEN.css
@@ -240,11 +240,6 @@ h2 {
     padding: 20px;
 }
 
-h3 {
-    text-align: center;
-    padding: 20px;
-}
-
 .slick-slide {
     margin: 20px;
 }
@@ -423,6 +418,7 @@ h3 {
 }
 
 h3 {
+    padding: 20px;
     text-align: center;
     font-size: 64px;
     margin-bottom: 16px;
@@ -576,4 +572,17 @@ footer {
     text-align: center;
     text-decoration: none;
     font-size: 12px;
+}
+
+P.mention {
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+
+h4 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    font-size: 120%;
 }
