--- a/servithenFR/cssFR/accueilFR.css
+++ b/servithenFR/cssFR/accueilFR.css
@@ -240,11 +240,6 @@ h2 {
     padding: 20px;
 }
 
-h3 {
-    text-align: center;
-    padding: 20px;
-}
-
 .slick-slide {
     margin: 20px;
 }
@@ -423,6 +418,7 @@ h3 {
 }
 
 h3 {
+    padding: 20px;
     text-align: center;
     font-size: 64px;
     margin-bottom: 16px;
@@ -584,6 +580,9 @@ P.mention {
     width: 75%;
 }
 
-h3 {
-    font-size: 180%;
+h4 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    font-size: 120%;
 }
