--- a/servithenFR/cssFR/accueilFR.css
+++ b/servithenFR/cssFR/accueilFR.css
@@ -243,7 +243,17 @@ h2 {
 h1 {
     text-align: center;
     padding: 20px;
+    font-size: 64px;
+    margin-bottom: 16px;
 }
+
+
+h3 {
+    text-align: center;
+    padding: 20px;
+  
+}
+
 
 .slick-slide {
     margin: 20px;
@@ -420,12 +430,6 @@ h1 {
     color: white;
     text-align: center;
     text-decoration: none;
-}
-
-h1 {
-    text-align: center;
-    font-size: 64px;
-    margin-bottom: 16px;
 }
 
 .description {
