--- a/servithenFR/cssFR/service.css
+++ b/servithenFR/cssFR/service.css
@@ -1,8 +1,3 @@
-#photoService1{
-width: 50%;
-height: 50%;
-}
-
 .pInfoService{
     background-color: rgb(214, 213, 213);
     margin-right: 20% ;
@@ -26,7 +21,7 @@ height: 50%;
     border-radius: 15px 0 0 15px  ;
 }
 
-#photoService2{
-    width: 37.5%;
-    height: 37.5%;
+.photoService{
+    width: 50%;
+    height: 50%;
     }
