--- a/test/en/cssEN/accueilEN.css
+++ b/test/en/cssEN/accueilEN.css
@@ -362,7 +362,7 @@ h4 {
 .left {
     animation-name: sortie;
     animation-duration: 0.5s;
-    position: absolute;
+   
     opacity: 0;
     height: 256px;
     z-index: -2;
@@ -380,7 +380,7 @@ h4 {
 .right {
     animation-name: sortie2;
     animation-duration: 0.5s;
-    position: absolute;
+
     opacity: 0;
     height: 256px;
     z-index: -2;
@@ -396,7 +396,7 @@ h4 {
 }
 
 .middle {
-    position: absolute;
+
     height: 256px;
     z-index: -1;
     top: 10px;
@@ -413,14 +413,16 @@ h4 {
     border-radius: 10px;
     width: 250px;
     display: flex;
-    justify-content: center;
+    align-items: center;
     height: 278px;
     position: relative;
     z-index: -3;
     box-shadow: 2px 5px 10px black;
     background-repeat: no-repeat;
     background-size: cover;
+    flex-direction: column;
 }
+
 
 .footerp {
     text-align: start;
@@ -430,6 +432,7 @@ h4 {
 }
 
 .description {
+    margin: 0;
     text-shadow: 0px 0px 5px white;
     color: black;
 }
