--- a/test/fr/cssFR/accueilFR.css
+++ b/test/fr/cssFR/accueilFR.css
@@ -363,7 +363,7 @@ h4 {
 .left {
     animation-name: sortie;
     animation-duration: 0.5s;
-    position: absolute;
+  
     opacity: 0;
     height: 256px;
     z-index: -2;
@@ -381,7 +381,7 @@ h4 {
 .right {
     animation-name: sortie2;
     animation-duration: 0.5s;
-    position: absolute;
+   
     opacity: 0;
     height: 256px;
     z-index: -2;
@@ -397,7 +397,7 @@ h4 {
 }
 
 .middle {
-    position: absolute;
+  
     height: 256px;
     z-index: -1;
     top: 10px;
@@ -414,13 +414,14 @@ h4 {
     border-radius: 10px;
     width: 250px;
     display: flex;
-    justify-content: center;
+    align-items: center;
     height: 278px;
     position: relative;
     z-index: -3;
     box-shadow: 2px 5px 10px black;
     background-repeat: no-repeat;
     background-size: cover;
+    flex-direction: column;
 }
 
 .footerp {
@@ -431,6 +432,7 @@ h4 {
 }
 
 .description {
+    margin: 0;
     text-shadow: 0px 0px 5px white;
     color: black;
 }
