--- a/accueil.css
+++ b/accueil.css
@@ -354,6 +354,8 @@ h2 {
     text-shadow: 0px 0px 5px white;
     color: black;
     z-index: 3;
+    position:absolute;
+    top: 1000px;
 }
 
 footer {
