--- a/test/fr/accueilFR.css
+++ b/test/fr/accueilFR.css
@@ -433,6 +433,8 @@ h4 {
 .description {
     text-shadow: 0px 0px 5px white;
     color: black;
+    position: absolute;
+    top: 1000px;
 }
 
 footer {
