--- a/test/fr/cssFR/accueilFR.css
+++ b/test/fr/cssFR/accueilFR.css
@@ -405,7 +405,7 @@ h4 {
     position: absolute;
     height: 256px;
     z-index: 2;
-    top: 10px;
+    top: 16px;
     transform: scale(100%);
     transition: transform 1s;
 }
@@ -439,6 +439,8 @@ h4 {
     text-shadow: 0px 0px 5px white;
     color: black;
     z-index: 4;
+    position: relative;
+    top: -16px;
 }
 
 footer {
@@ -587,11 +589,11 @@ footer {
 }
 .modifright{
     position: absolute;
-    left: 188px
+    left: -148px
 }
 .modifleft{
     position: absolute;
-    left: -188px
+    left: 216px
 }
 .descriptionmodif{
     position: absolute;
