--- a/test/fr/cssFR/service.css
+++ b/test/fr/cssFR/service.css
@@ -2,6 +2,7 @@
     background-color: rgb(214, 213, 213);
     margin-right: 20% ;
     padding: 2% 5% 2% 5%;
+    margin-bottom: 64px;
 }
 
 .textphoto{
