--- a/test/fr/cssFR/accueilFR.css
+++ b/test/fr/cssFR/accueilFR.css
@@ -203,7 +203,7 @@ body {
 }
 
 #infoAccueil {
-    background-image: linear-gradient( rgb(47, 53, 83), transparent), url(/img/fondaccueil.jpg);
+    background-image: linear-gradient( rgb(47, 53, 83), transparent)/*, url(/img/fondaccueil.jpg)*/;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -365,7 +365,7 @@ h4 {
     position: absolute;
     opacity: 0;
     height: 256px;
-    z-index: -2;
+    z-index: 1;
     top: 10px;
     left: 10px;
 }
@@ -383,7 +383,7 @@ h4 {
     position: absolute;
     opacity: 0;
     height: 256px;
-    z-index: -2;
+    z-index: 1;
     top: 10px;
     left: 10px;
 }
@@ -397,7 +397,7 @@ h4 {
 
 .middle {
     height: 256px;
-    z-index: -1;
+    z-index: 2;
     top: 10px;
     transform: scale(100%);
     transition: transform 1s;
@@ -415,7 +415,7 @@ h4 {
     align-items: center;
     height: 278px;
     position: relative;
-    z-index: -3;
+    z-index: 0;
     box-shadow: 2px 5px 10px black;
     background-repeat: no-repeat;
     background-size: cover;
@@ -591,4 +591,16 @@ h4 {
     margin-right: auto;
     width: 75%;
     font-size: 120%;
+}
+.fondaccueil{
+    position:absolute;
+    width: 100vw;
+    z-index: -1;
+}
+section{
+    background-color: white;
+}
+.headtitle{
+    border-top: 0px;
+    margin-top: 50px;
 }
